fixed overflow on smaller devices

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -49,6 +49,11 @@ body {
   width: 100vw;
   overflow-x: hidden;
 }
+html,
+body {
+  overflow-x: hidden;
+  width: 100%;
+}
 
 main {
   background-image: url("./../assets/background.webp");
